# sino

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  snapcraft.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
compiler/: Cargo.toml
compiler/sinoc_ast/: Cargo.toml
compiler/sinoc_llvm/: Cargo.toml
compiler/sinoc_llvm/src/: implementation_typed_pointers.rs
example/: hello_world.sn  hello_world.🐉
src/: main.rs
